<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.meand100_2.ReportsAcitvityPortal">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:layout_width="wrap_content"
                android:layout_height="438dp"
                android:columnWidth="90dp"
                android:numColumns="2"
                android:verticalSpacing="10dp"
                android:horizontalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center"
                android:id="@+id/reports_list_gridview"
                android:layout_margin="5dp" />

            <Button
                android:text="@string/not_urgent_report_button"
                android:id="@+id/non_urgent_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="20dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/forms_button"
                    android:id="@+id/forms_button"
                    android:layout_marginLeft="0dp"
                    android:layout_margin="5dp" />

                <Button
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/pniot_hazibur_button"
                    android:id="@+id/pniot_button"
                    android:layout_marginRight="0dp"
                    android:layout_margin="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
